--- a/index.html
+++ b/index.html
@@ -74,6 +74,40 @@
         <div class="kv" id="local-info"></div>
       </div>
     </section>
+<section class="section">
+  <div class="section__header">
+    <h2 class="section__title">Por que escolher</h2>
+    <p class="section__desc">Página leve, bonita e focada em conversão.</p>
+  </div>
+
+  <div class="grid grid--3">
+    <div class="card card--soft">
+      <h3 class="card__title">Rápido no celular</h3>
+      <p class="card__text">Abre instantâneo e não trava.</p>
+    </div>
+    <div class="card card--soft">
+      <h3 class="card__title">Foco no WhatsApp</h3>
+      <p class="card__text">Leva o cliente direto pra conversa certa.</p>
+    </div>
+    <div class="card card--soft">
+      <h3 class="card__title">Atualização simples</h3>
+      <p class="card__text">Produtos e preços ficam fáceis de trocar.</p>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="section__header">
+    <h2 class="section__title">Perguntas frequentes</h2>
+    <p class="section__desc">Respostas rápidas para tirar dúvidas.</p>
+  </div>
+
+  <div class="card card--soft">
+    <p class="card__text"><strong>Como faço para comprar?</strong><br>É só clicar no WhatsApp e pedir o modelo desejado.</p>
+    <p class="card__text"><strong>Tem garantia?</strong><br>Consulte no WhatsApp e confirme as condições do aparelho/serviço.</p>
+    <p class="card__text"><strong>Vocês entregam?</strong><br>Informe seu bairro no WhatsApp para confirmar entrega/retirada.</p>
+  </div>
+</section>
 
     <footer class="footer">
       <p class="footer__text" id="footer-text">© Site Fácil</p>
@@ -88,3 +122,4 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
