--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Site Fácil</title>
   <meta name="description" content="Página Site Fácil" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css?v=2" />
 </head>
 
 <body class="clean">
@@ -122,4 +122,5 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
